--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -9,7 +9,7 @@
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
-        <mat-toolbar color="primary">
+        <mat-toolbar color="accent">
             <button
                 type="button"
                 aria-label="Toggle sidenav"
@@ -18,7 +18,7 @@
                 *ngIf="isHandset$ | async">
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
-            <span>bliblioteca-frontend</span>
+            <span >Curse RXJS</span>
         </mat-toolbar>
 
         <!-- Add Content Here -->
