--- a/src/app/core/pages/home/home.component.scss
+++ b/src/app/core/pages/home/home.component.scss
@@ -1,3 +1,12 @@
 @font-face {
     font-family: 'Jokerman';
 }
+
+.div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &-main {
+
+    }
+}
